Updated podspec/Podfile to tag the current version

--- a/SecondBridge/Podfile
+++ b/SecondBridge/Podfile
@@ -2,4 +2,4 @@ platform :ios, '8.0'
 inhibit_all_warnings!
 use_frameworks!
 link_with 'SecondBridge','SecondBridgeTests', 'VectorTests'
-pod 'Swiftz'
+pod 'Swiftz', '0.2.2'
